tests/instantiating/invalid_type_of_element_at_package_level/bus.fbd
foo status
	width = 10
